[gd_scene load_steps=10 format=3 uid="uid://8m3d8yw0pxws"]

[ext_resource type="Texture2D" uid="uid://mludexbe1lu2" path="res://assets/sprites/slime_green.png" id="1_341sq"]
[ext_resource type="Script" path="res://scripts/slime.gd" id="1_dnuh2"]
[ext_resource type="PackedScene" uid="uid://bur554qwvc5le" path="res://scenes/killzone.tscn" id="2_8dcgb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cm1a2"]
atlas = ExtResource("1_341sq")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6kge"]
atlas = ExtResource("1_341sq")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_b0u6w"]
atlas = ExtResource("1_341sq")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yobhl"]
atlas = ExtResource("1_341sq")
region = Rect2(72, 24, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_shnr1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm1a2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6kge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b0u6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yobhl")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awgmy"]
size = Vector2(10, 12)

[node name="Slime" type="Node2D"]
script = ExtResource("1_dnuh2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_shnr1")
autoplay = "default"
frame_progress = 0.157967

[node name="Killzone" parent="." instance=ExtResource("2_8dcgb")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_awgmy")

[node name="RayCastRightDown" type="RayCast2D" parent="."]
position = Vector2(6, 6)
target_position = Vector2(0, 7)

[node name="RayCastLeftDown" type="RayCast2D" parent="."]
position = Vector2(-6, 6)
target_position = Vector2(0, 7)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(-8, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, 6)
target_position = Vector2(8, 0)
